styles.css
canvas {
  outline: none;
  -webkit-tap-highlight-color: transparent;
  display: block;
  background-color: lightgrey;
}
.pointer {
  cursor: pointer;
}

html,
body {
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  margin: 0;
  display: flex;
}

h3 {
  margin-top: 10px;
  margin-bottom: 5px;
}

.main-container {
  padding: 20px;
  flex: 1;
  display: flex;
  flex-direction: column;
  max-width: 400px;
  max-height: 800px;
  margin: 0 auto;
}

.screen {
  display: none;
  flex-direction: column;
  flex: 1;
}

.game-screen {
  display: block;
}

.button-row {
  display: flex;
  direction: row;
  margin: 10px 0;
  justify-content: space-between;
}

.button-row > button {
  width: 80px;
}

.canvas-wrapper {
  flex: 1;
}

.finish-game-screen {
  white-space: pre;
}

.new-game-screen {
  justify-content: space-between;
}

.finish-game-code {
  padding-bottom: 20px;
  display: block;
  font-size: 16px;
}

.in-game-menu {
  display: flex;
  flex-direction: row;
}

.show,
.lives {
  display: none;
}

.show,
.abort {
  margin: 0 10px;
}

.custom-game-input {
  display: flex;
  flex-direction: row;
  padding-bottom: 5px;
}

.custom-game-input-label {
  flex: 1;
}

h1 {
  text-align: center;
}

